ChangeLog
=========

recent
------
- installer-gui: - fixed regular expression support for filename relocation on unpack
                 - ignore package manifest files when filepath relocating on unpacking is used, 
                   they are incorrect 
                 - added timestamp to config file and print it to the log file, this can be used 
                   for an live update client

0.8.3-5
------
- installer-gui: - separated mirror list from config file. It is now loaded from the file 
                   mirrors.lst from the top level dir of download.cegit.de
                 - refactored winzard pages - the page content comes from the SettingsPage
                 - cleaned internal structure to avoid displaying duplicated packages
                 - fixed download canceling 
                 - delete zero length files when download was canceled.

0.8.3-4
-------
- installer-gui: - fixed http 302 Permanted moved condition
                 - fixed more duplicated package display
                 - fixed some display issued related to end user and developer install mode 
                 - removed fixed package names length in the @package config definition
                 - disabled next and back button when downloading/removing and installing

0.8.3-3
-------
- installer-gui: - reorderd wizard pages (install path, proxy settings, download location, mirror)
                   because before loading the initial config proxy settings must be present
                 - fixed duplicate package display when running the first time                    
                 - added end user and developer install mode 
                 - disabled compiler type and install mode changes when packages are installed

0.8.3-2
-------
- installer-gui: - fixed case where packages are displayed twice

0.8.3-1
-------
- installer-gui: - fixed bug not been able to change developer mode

0.8.3
-----
- installer-gui: - added update support